Customizing the content a bit.

--- a/scouts/app/templates/footer.html
+++ b/scouts/app/templates/footer.html
@@ -1,7 +1,7 @@
 <p>
     <small>
-        App Engine Essence is a fork, by <a href="http://twitter.com/AlchemyCS">@AlchemyCS</a>, off the
-        <a href="https://github.com/metachris/appengine-boilerplate">App Engine Boilerplate</a> that also integrates
-        <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.
+        Created by the 
+        <a href="http://www.meetup.com/WomanDevelopers/">Chicago Women Developers</a>. Available on 
+        <a href="https://github.com/chicago-women-developers/chicago_women_developers_scout_project">Github</a>.
     </small>
 </p>
