--- a/scouts/app/templates/index.html
+++ b/scouts/app/templates/index.html
@@ -4,10 +4,9 @@
 
 {% block header %}
 <div class="hero-unit">
-    <h1>App Engine Essence<img src="/img/apple-touch-icon-72x72.png" style="vertical-align: top"/></h1>
+    <h1>Boy Scouts<img src="/img/apple-touch-icon-72x72.png" style="vertical-align: top"/></h1>
     <p>
-        A union of <a rel="nofollow" href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>
-        and the <a rel="nofollow" href="http://www.appengine-boilerplate.com/">App Engine Boilerplate</a>.
+        Building tomorrow's leaders.
     </p>
 </div>
     
