--- a/scouts/app/templates/nav-bar.html
+++ b/scouts/app/templates/nav-bar.html
@@ -6,27 +6,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="{{nav_bar.home}}">App Engine Essence</a>
+      <a class="brand" href="{{nav_bar.home}}">Chicago Boy Scouts</a>
       <div class="nav-collapse">
         <ul class="nav">
           <li class="active"><a href="{{nav_bar.home}}"><span class="icon-home"></span>Home</a></li>
-          <li><a href="https://github.com/alchemycs/appengine-essence"><span class="icon-github-sign icon-white icon-large"></span>GitHub</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="icon-heart"></span>Using<span class="caret"</span></a>
-            <ul class="dropdown-menu">
-              <li><a href="http://www.earthexplorer.info">Earth Explorer</a></li>
-              <li><a href="http://www.clickncool.net">Click-n-Cool</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="icon-user"></span>Contact<span class="caret"</span></a>
-            <ul class="dropdown-menu">
-              <li><a href="http://www.twitter.com/AlchemyCS">@AlchemyCS<span class="icon-twitter-sign icon-large pull-right"></span></a></li>
-              <li><a href="http://coderwall.com/alchemycs">Coderwall<span class="icon-list-alt icon-large pull-right"></span></a></li>
-              <li><a href="http://forr.st/-AlchemyCS">Forrst<span class="icon-leaf icon-large pull-right"></span></a></li>
-              <li><a href="http://au.linkedin.com/in/mrmchugh">LinkedIN<span class="icon-linkedin-sign icon-large pull-right"></span></a></li>
-            </ul>
-          </li>
+          <li><a href="/login"></span>Login</a></li>
+          <li><a href="/scoutregistration"></span>Scout Registration</a></li>
         </ul>
         <div class="pull-right">
           <ul class="nav">
