--- a/scouts/app/templates/header.html
+++ b/scouts/app/templates/header.html
@@ -1,7 +1,6 @@
 <div class="page-header">
-    <h1>App Engine Essence</h1>
+    <h1>Chicago Boy Scouts</h1>
     <p class="lead">
-        A union of <a rel="nofollow" href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>
-        and the <a rel="nofollow" href="http://www.appengine-boilerplate.com/">App Engine Boilerplate</a>.
+        Building tomorrow's leaders.
     </p>
 </div>
