Added PDF Registration form and modified app.yaml file.

--- a/scouts/app/templates/index.html
+++ b/scouts/app/templates/index.html
@@ -23,6 +23,7 @@
             <h2>What is this?</h2>
             <p>
                 Hello World!
+				<a href="Registration_Form.pdf">pdf file</a>
             </p>
         </div>
     </div>
