--- a/scouts/app/templates/welcomeform.html
+++ b/scouts/app/templates/welcomeform.html
@@ -2,4 +2,7 @@
 	<html>
 		Welcome, {{username}}!
 		Thank you for registering!
+		<p>
+		<a href="Registration_Form.pdf">Registration Form</a>
+		</p>
 	</html>
