Remove static from the PDF link

--- a/scouts/app/templates/welcomeform.html
+++ b/scouts/app/templates/welcomeform.html
@@ -3,6 +3,6 @@
 		Welcome, {{username}}!
 		Thank you for registering!
 		<p>
-		<a href="/static/PDF/Registration_Form.pdf">Registration Form</a>
+		<a href="/PDF/Registration_Form.pdf">Registration Form</a>
 		</p>
 	</html>
