Update all templates to use the navigation bar.

--- a/scouts/app/templates/nav-bar.html
+++ b/scouts/app/templates/nav-bar.html
@@ -10,7 +10,6 @@
       <div class="nav-collapse">
         <ul class="nav">
           <li class="active"><a href="{{nav_bar.home}}"><span class="icon-home"></span>Home</a></li>
-          <li><a href="/login"></span>Login</a></li>
           <li><a href="/scoutregistration"></span>Scout Registration</a></li>
         </ul>
         <div class="pull-right">
@@ -25,7 +24,7 @@
             </li>
             {% else %}
             <!--<li><a href="/login?continue-/">Test The Login</a></li>-->
-            <li><a href="{{nav_bar.login}}"><span class="icon-signin"></span>Test The Login</a></li>
+            <li><a href="{{nav_bar.login}}"><span class="icon-signin"></span>Login</a></li>
             {% endif %}
           </ul>
         </div>
