--- a/scouts/app/templates/welcomeform.html
+++ b/scouts/app/templates/welcomeform.html
@@ -1,11 +1,12 @@
+{% extends "bootstrap-starter.html" %}
 
-	<html>
-		Welcome, {{username}}!
-		Thank you for registering!
-		<p>
-		<a href="/PDF/New_AdultApplicationForm.pdf">Adult Registration Form</a>
-		</p>
-		<p>
-		<a href="/PDF/New_YouthREGForm.pdf">Youth Registration Form</a>
-		</p>
-	</html>
+{% block main %}
+  Welcome, {{username}}!
+  Thank you for registering!
+  <p>
+    <a href="/PDF/New_AdultApplicationForm.pdf">Adult Registration Form</a>
+  </p>
+  <p>
+    <a href="/PDF/New_YouthREGForm.pdf">Youth Registration Form</a>
+  </p>
+{% endblock %}
