--- a/scouts/app/templates/bootstrap-starter.html
+++ b/scouts/app/templates/bootstrap-starter.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     {% block head %}
-    <title>{% block title %}App Engine Bootstrap{% endblock %}</title>
+    <title>{% block title %}Boy Scouts of America{% endblock %}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
     {% endblock %}
     <meta name="author" content="">
