--- a/scouts/app/templates/index.html
+++ b/scouts/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block header %}
   <div class="hero-unit">
-    <h1>Troop 3825/825 <img src="/img/logo.jpg" height = "100" style="vertical-align: top"/></h1>
+    <h1>Troop 3825/825 <img src="/img/logo.jpg" height="100px" style="vertical-align: top"/></h1>
     <p>
       Building tomorrow's leaders.
     </p>
