Update handler and indentation consistency.  Renames files to reflect their handlers and URI patterns.

--- a/scouts/app/templates/nav-bar.html
+++ b/scouts/app/templates/nav-bar.html
@@ -10,7 +10,7 @@
       <div class="nav-collapse">
         <ul class="nav">
           <li class="active"><a href="{{nav_bar.home}}"><span class="icon-home"></span>Home</a></li>
-          <li><a href="/scoutregistration"></span>Scout Registration</a></li>
+          <li><a href="/scout_registration"></span>Scout Registration</a></li>
         </ul>
         <div class="pull-right">
           <ul class="nav">
