--- a/scouts/app/templates/scout_registration.html
+++ b/scouts/app/templates/scout_registration.html
@@ -2,7 +2,7 @@
 
 {% block main %}
   Hello, {{ username }}!
-  <form action="/scoutregistration" method="post">
+  <form action="/scout_registration" method="post">
     <input type="checkbox" name="isParent" value="true">Are you a Parent?<br>
     <input type="submit" value="Submit">
   </form>
