Adds template files that previously did not exist.  Adds all reachable template pages to the nav-bar.

--- a/scouts/app/templates/nav-bar.html
+++ b/scouts/app/templates/nav-bar.html
@@ -11,6 +11,8 @@
         <ul class="nav">
           <li class="active"><a href="{{nav_bar.home}}"><span class="icon-home"></span>Home</a></li>
           <li><a href="/scout_registration"></span>Scout Registration</a></li>
+          <li><a href="/create_event"></span>Create Event</a></li>
+          <li><a href="/view_event"></span>View Event</a></li>
         </ul>
         <div class="pull-right">
           <ul class="nav">
