--- a/scouts/app/templates/scout_registration_complete.html
+++ b/scouts/app/templates/scout_registration_complete.html
@@ -1,8 +1,11 @@
 {% extends "bootstrap-starter.html" %}
 
 {% block main %}
-  Welcome, {{username}}!
-  Thank you for registering!
+  <h2>Scout Registration Complete</h2>
+  <p>
+    Welcome, {{username}}!  Thank you for registering!<br>
+    Please choose the appropriate registration form to fill out.
+  </p>
   <p>
     <a href="/PDF/New_AdultApplicationForm.pdf">Adult Registration Form</a>
   </p>
