--- a/scouts/app/templates/index.html
+++ b/scouts/app/templates/index.html
@@ -17,9 +17,9 @@
   {% endif %}
   <div class="row">
     <div class="span9">
-      <h2>What is this?</h2>
+      <h2>Welcome to Chicago Boy Scouts</h2>
       <p>
-        Hello World!
+        TODO: Fill me in with content! 
       </p>
     </div>
   </div>
