--- a/scouts/app/templates/nav-bar.html
+++ b/scouts/app/templates/nav-bar.html
@@ -10,14 +10,15 @@
       <div class="nav-collapse">
         <ul class="nav">
           <li class="active"><a href="{{nav_bar.home}}"><span class="icon-home"></span>Home</a></li>
-          <li><a href="/scout_registration"></span>Scout Registration</a></li>
-          <li><a href="/create_event"></span>Create Event</a></li>
-          <li><a href="/view_event"></span>View Event</a></li>
+          <li><a href="/scout_registration">Scout Registration</a></li>
+          <li><a href="/create_event">Create Event</a></li>
+          <li><a href="/view_event">View Event</a></li>
+	  <li><a href="/user_list">User List</a></li>
         </ul>
         <div class="pull-right">
           <ul class="nav">
             {% if prefs %}
-            <li class="dropdown">
+	    <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="//www.gravatar.com/avatar/{{prefs.email_md5}}?s=16&d=mm" align="absmiddle" /> {{prefs.nickname}}<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="{{nav_bar.account}}">Account<span class="icon-cogs pull-right"></span></a></li>
