added the ability to log out

--- a/scouts/app/templates/logout.html
+++ b/scouts/app/templates/logout.html
@@ -2,8 +2,8 @@
 
 {% block main %}
   <h2>Logout</h2>
-  <div>
-    TODO: Fill me in with content!
-  </div> 
+
+    you are logged out! 
+ 
 {% endblock main %}
 
