--- a/scouts/app/templates/view_event.html
+++ b/scouts/app/templates/view_event.html
@@ -1,9 +1,11 @@
 {% extends "bootstrap-starter.html" %}
 
 {% block main %}
-  <h2>View an event</h2>
+  <h2>List all the events</h2>
   <div>
-    TODO: Fill me in with content!
-  </div> 
+    {% for event in events %}
+    {{ event.eventName }} 
+    <br>
+    {% endfor %}
+  </div>
 {% endblock main %}
-
