Added description to show event page

--- a/scouts/app/templates/view_event.html
+++ b/scouts/app/templates/view_event.html
@@ -6,6 +6,7 @@
     {% for event in events %}
     {{ event.eventName }} 
     <br>
+    {{ event.eventDescription }} 
     {% endfor %}
   </div>
 {% endblock main %}
